2007-05-23  Sven Neumann  <sven@gimp.org>

	* app/dialogs/channel-options-dialog.c
	* app/dialogs/convert-dialog.c
	* app/dialogs/desaturate-dialog.c
	* app/dialogs/fade-dialog.c
	* app/dialogs/image-merge-layers-dialog.c
	* app/dialogs/image-new-dialog.c
	* app/dialogs/image-scale-dialog.c
	* app/dialogs/layer-add-mask-dialog.c
	* app/dialogs/layer-options-dialog.c
	* app/dialogs/module-dialog.c
	* app/dialogs/offset-dialog.c
	* app/dialogs/palette-import-dialog.c
	* app/dialogs/print-size-dialog.c
	* app/dialogs/resize-dialog.c
	* app/dialogs/scale-dialog.c
	* app/dialogs/template-options-dialog.c
	* app/dialogs/vectors-export-dialog.c
	* app/dialogs/vectors-import-dialog.c
	* app/dialogs/vectors-options-dialog.c: allocate structs using GSlice.

2007-05-23  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpiscissorstool.[ch]: use a GQueue to store the points.

2007-05-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/gimphelpitem.c
	* plug-ins/help/gimphelplocale.c
	* plug-ins/help/help.c
	* plug-ins/help/gimphelpdomain.c: allocate structs using GSlice.

2007-05-23  Sven Neumann  <sven@gimp.org>

	* app/paint/gimppaintoptions.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimphuesaturationtool.c
	* app/tools/gimpiscissorstool.c
	* app/tools/gimplevelstool.c
	* app/tools/gimprectangleoptions.c
	* app/tools/gimprectangletool.c
	* app/tools/gimpthresholdtool.c
	* app/tools/tool_manager.c: allocate structs using GSlice.

2007-05-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_cmd_move_sash.c (sash_move): applied
	patch from Kevin Hurewitz that fixes resizing an area while being
	zoomed in (bug #439222).

2007-05-23  Sven Neumann  <sven@gimp.org>

	* app/actions/image-commands.c
	* app/actions/templates-commands.c: allocate structs using GSlice.

2007-05-23  Tor Lillqvist  <tml@novell.com>
